--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=khaneshYar
 server.port=8083
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Se09398326564
+spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
